fix: overflow 위치 변경
app -> html

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,15 +8,13 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow: hidden;
+  background-color: var(--Primary-20);
 }
 
 #app {
   height: 100%;
-  overflow: auto;
   display: flex;
   flex-direction: column;
-  background-color: var(--Primary-20);
 }
 
 :root{
